N-body problem 4.5 3-body problem - stable system

--- a/N-body problem/N-body problem.ipynb
+++ b/N-body problem/N-body problem.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "acebdeb3",
    "metadata": {},
    "outputs": [],
@@ -123,9 +123,21 @@
     "        the names of the N bodies for which the problem \n",
     "        was solved.\n",
     "    \n",
+    "    draw_path: bool\n",
+    "        Draw the path that each particule follows in the \n",
+    "        time.\n",
+    "    \n",
+    "    draw_init: bool\n",
+    "        Draw the initial position of the N particles.\n",
+    "        \n",
+    "    draw_end: bool\n",
+    "        Draw the last position of the particule in the time\n",
+    "        of the simulation.\n",
+    "        \n",
     "    figsize: tuple\n",
     "        tuple containing the dimensions of the plot.\n",
     "    \"\"\"\n",
+    "    #Number of bodies\n",
     "    N = int(sol.shape[1]/6)\n",
     "    \n",
     "    fig = plt.figure(figsize=figsize)\n",
@@ -200,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c67d2b29",
+   "id": "eca4876f",
    "metadata": {},
    "source": [
     "In astronomy, the magnitudes use to be so large that  we can not compare them easily. Due to this, it is common to rewrite the values using scales that allow us to compare easily. For this example, canonical units are chosen. The unit of mass is the mass of the Sun, and we set $G=1$. "
@@ -4534,7 +4546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "1b8cd791",
    "metadata": {},
    "outputs": [],
@@ -4552,7 +4564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "018f5d8e",
    "metadata": {},
    "outputs": [],
@@ -4563,7 +4575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "1aa5008a",
    "metadata": {},
    "outputs": [
