Eclipse Forecaster + add State Vector (SV) for the Moon, Earth and Sun

--- a/Eclipse forecaster/Eclipse-forecaster.ipynb
+++ b/Eclipse forecaster/Eclipse-forecaster.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "788eb75c",
+   "id": "6556061d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,16 +18,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60dd5333",
+   "id": "71d75cdb",
    "metadata": {},
    "source": [
-    "To predict the occurency of an eclipse we solve the N-body problem for the three bodies Earth, Moom, Sun."
+    "To predict the occurency of an eclipse we solve the N-body problem for the three bodies Earth, Moom and Sun."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ed19bd96",
+   "id": "8f57c0fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,9 +150,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "660a9390",
+   "metadata": {},
+   "source": [
+    "In this notebook we are going to use canonical units. The unit of mass is the mass of the Sun, and we set, as usual, $G=1$. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fe987237",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Canonical units\n",
+    "m  = 1\n",
+    "km = 1000*m\n",
+    "kg = 1\n",
+    "s  = 1\n",
+    "G  = 6.67408e-11*m**3/kg/s**2\n",
+    "\n",
+    "ul = 1.496e11*m\n",
+    "um = 1.9891e30*kg\n",
+    "ut = np.sqrt(ul**3/(G*um))\n",
+    "G  = 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8480f27e",
+   "id": "64e3a55f",
    "metadata": {},
    "outputs": [],
    "source": []
