--- a/Eclipse forecaster/Eclipse-forecaster.ipynb
+++ b/Eclipse forecaster/Eclipse-forecaster.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "07b3cfc6",
+   "id": "9066fe95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d1ef1d4",
+   "id": "0c66a76d",
    "metadata": {},
    "source": [
     "To predict the occurency of an eclipse we solve the N-body problem for the three bodies Earth, Moom and Sun."
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "65b81c6a",
+   "id": "33997075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5e2d2ae",
+   "id": "8dc7054b",
    "metadata": {},
    "source": [
     "# Units"
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eda684d4",
+   "id": "cdd086fa",
    "metadata": {},
    "source": [
     "In this notebook we are going to use canonical units. The unit of mass is the mass of the Sun, and we set, as usual, $G=1$. "
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e56fc185",
+   "id": "b13679e6",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa63ff46",
+   "id": "a2560b00",
    "metadata": {},
    "source": [
     "# State vector SV and integration time"
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5dda28b3",
+   "id": "6efdfaf0",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d815c6c2",
+   "id": "295acd53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed56d379",
+   "id": "7571f454",
    "metadata": {},
    "source": [
     "### Integration time\n",
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "83c7bcaa",
+   "id": "c5cab092",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f4177da",
+   "id": "f8fd1f65",
    "metadata": {},
    "source": [
     "# Integration"
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b790b179",
+   "id": "ff1140dd",
    "metadata": {},
    "outputs": [
     {
@@ -412,13 +412,14 @@
     "                 args=(ms_MES,),\n",
     "                 tfirst=True, \n",
     "                 full_output=1)\n",
+    "\n",
     "sol_MES[1][\"message\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ffe12e1a",
+   "id": "c4096dc3",
    "metadata": {},
    "outputs": [
     {
@@ -1404,9 +1405,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "406b2895",
+   "metadata": {},
+   "source": [
+    "# How to know if there is an eclipse?\n",
+    "\n",
+    "Here we are going to use a geometric argument to establish wheter we have an eclipse or not. From the vector of possition of the Earth and the Sun we can write the symetric equations of the line between them, we will have an eclipse if the possition of the Moon fullfills those equations.\n",
+    "\n",
+    "Lets say the Earth has a position vector given by $R_{E}=(x_E, y_E, z_E)$ and for the Sun we have $R_{S}=(x_S, y_S, z_S)$, so, the vectorial equation of the straight line between them is given by:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    (x, y, z) = R_E + \\alpha(R_E-R_S)\n",
+    "\\end{equation}\n",
+    "\n",
+    "which give us the symetric equations:\n",
+    "\\begin{equation}\n",
+    "    \\alpha = \\frac{x-x_E}{x_E-x_S}\\\\\n",
+    "    \\alpha = \\frac{y-y_E}{y_E-y_S}\\\\\n",
+    "    \\alpha = \\frac{z-z_E}{z_E-z_S}\n",
+    "\\end{equation}\n",
+    "\n",
+    "We will have an eclipse if the possition of the Moon fullfills these equations, that is, if we obtain the same $\\alpha$ parammeter from all the three equations. This situation is almost imposible, but we can ask to have three $\\alpha$'s such their differences is as small as a given tolerance $tol$ parammeter. The possition vector of the Moon is given by $R_{M}=(x_M, y_M, z_M)$ so, from the symetric equations:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\alpha_x = \\frac{x_M-x_E}{x_E-x_S}\\\\\n",
+    "    \\alpha_y = \\frac{y_M-y_E}{y_E-y_S}\\\\\n",
+    "    \\alpha_z = \\frac{z_M-z_E}{z_E-z_S}\n",
+    "\\end{equation}\n",
+    "\n",
+    "we will say that we have an eclipse if the following conditions are fullfilled:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    |\\alpha_x-\\alpha_y|\\leq \\text{tol}\\\\\n",
+    "    |\\alpha_y-\\alpha_z|\\leq \\text{tol}\n",
+    "\\end{equation}\n",
+    "\n",
+    "those conditions implie that $\\alpha_x \\approx\\alpha_y\\approx\\alpha_z$. As the Moon, the Earth and the Sun are moving, their possitios are a finction of the time, so the equations must be computed for each of those times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fda531a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "84\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Possition vector for each, Moon, Earth and Sun\n",
+    "rs_Moon  = sol_MES[0][:,0:3]\n",
+    "rs_Earth = sol_MES[0][:,6:9]\n",
+    "rs_Sun   = sol_MES[0][:,12:15]\n",
+    "\n",
+    "# alphas\n",
+    "alpha_x = (rs_Moon[:,0] - rs_Earth[:,0]) / (rs_Earth[:,0] - rs_Sun[:,0])\n",
+    "alpha_y = (rs_Moon[:,1] - rs_Earth[:,1]) / (rs_Earth[:,1] - rs_Sun[:,1])\n",
+    "alpha_z = (rs_Moon[:,2] - rs_Earth[:,2]) / (rs_Earth[:,2] - rs_Sun[:,2])\n",
+    "\n",
+    "# testing tolerance\n",
+    "tol = 1.13e-2\n",
+    "id_ts_MES        = np.linspace(0, len(ts_MES)-1, len(ts_MES), dtype=int)\n",
+    "id_eclipse_times = id_ts_MES[(abs(alpha_x-alpha_y) < tol) & (abs(alpha_y-alpha_z) < tol)]\n",
+    "\n",
+    "# The amount of eclipses\n",
+    "print(f\"{len(eclipse_times)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c65700df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  830,  2585,  3178,  3959,  6506,  6697,  7874,  8265,  8655,\n",
+       "        9642, 10615, 11005, 12387, 13175, 14346, 15916, 17670, 19044,\n",
+       "       20219, 21588, 21782, 22174, 22769, 25120, 26478, 27657, 29039,\n",
+       "       29429, 29821, 31963, 32170, 35303, 37456, 38042, 39808, 39998,\n",
+       "       40203, 40597, 42346, 42553, 43520, 45297, 46261, 48038, 49209,\n",
+       "       50385, 51358, 54102, 54294, 55861, 58210, 58599, 61160, 62124,\n",
+       "       63509, 64288, 64474, 68592, 69178, 69765, 71328, 71719, 74066,\n",
+       "       75245, 77408, 80148, 81900, 82102, 83082, 83472, 84251, 84448,\n",
+       "       86794, 87390, 87579, 87970, 88360, 89739, 92482, 93448, 95222,\n",
+       "       96394, 97568, 97960])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id_eclipse_times"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4471a2e8",
+   "id": "f878cde2",
    "metadata": {},
    "outputs": [],
    "source": []
