--- a/Eclipse forecaster/Eclipse-forecaster.ipynb
+++ b/Eclipse forecaster/Eclipse-forecaster.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9066fe95",
+   "id": "16df4a32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c66a76d",
+   "id": "5e3e7acf",
    "metadata": {},
    "source": [
     "To predict the occurency of an eclipse we solve the N-body problem for the three bodies Earth, Moom and Sun."
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "33997075",
+   "id": "009d2679",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dc7054b",
+   "id": "dcd95ff5",
    "metadata": {},
    "source": [
     "# Units"
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdd086fa",
+   "id": "7400a4fe",
    "metadata": {},
    "source": [
     "In this notebook we are going to use canonical units. The unit of mass is the mass of the Sun, and we set, as usual, $G=1$. "
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b13679e6",
+   "id": "c0a47e8a",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2560b00",
+   "id": "62e58ac0",
    "metadata": {},
    "source": [
     "# State vector SV and integration time"
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6efdfaf0",
+   "id": "cf05059b",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
     }
    ],
    "source": [
-    "#Loading the data\n",
+    "#Loading the data. https://ssd.jpl.nasa.gov/horizons/app.html#/\n",
     "data = pd.read_csv(\"Moon_Earth_Sun_SV.csv\", index_col=\"Body\")\n",
     "data.columns = data.columns.str.strip()\n",
     "\n",
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "295acd53",
+   "id": "4da39266",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7571f454",
+   "id": "3f3d76db",
    "metadata": {},
    "source": [
     "### Integration time\n",
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c5cab092",
+   "id": "773c64ae",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8fd1f65",
+   "id": "26398bdb",
    "metadata": {},
    "source": [
     "# Integration"
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ff1140dd",
+   "id": "ea15f242",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c4096dc3",
+   "id": "f1402517",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "406b2895",
+   "id": "1aac301d",
    "metadata": {},
    "source": [
     "# How to know if there is an eclipse?\n",
@@ -1447,7 +1447,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fda531a7",
+   "id": "c21ff5a0",
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c65700df",
+   "id": "8ad0760e",
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f878cde2",
+   "id": "447438bd",
    "metadata": {},
    "outputs": [],
    "source": []
