EF tol correction

--- a/Eclipse forecaster/Eclipse-forecaster.ipynb
+++ b/Eclipse forecaster/Eclipse-forecaster.ipynb
@@ -3589,6 +3589,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "b8ac59a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "solar    42\n",
+       "lunar    41\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eclipses.type.value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "84e16f58",
    "metadata": {},
