--- a/N-body problem/N-body problem.ipynb
+++ b/N-body problem/N-body problem.ipynb
@@ -5699,7 +5699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "1b8cd791",
    "metadata": {},
    "outputs": [],
@@ -5717,7 +5717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "018f5d8e",
    "metadata": {},
    "outputs": [],
@@ -5728,7 +5728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "1aa5008a",
    "metadata": {},
    "outputs": [
@@ -6711,7 +6711,7 @@
     }
    ],
    "source": [
-    "step = 10\n",
+    "step = 50\n",
     "idx  = step\n",
     "frames = int(len(sol_3)/step)\n",
     "N = int(sol_3.shape[1]/6)\n",
@@ -6750,7 +6750,8 @@
     "    \n",
     "    idx+=step\n",
     "        \n",
-    "animation = FuncAnimation(plt.gcf(), draw, frames, interval=15, repeat=False, init_func=init_function) "
+    "animation = FuncAnimation(plt.gcf(), draw, frames, interval=15, repeat=False, init_func=init_function) \n",
+    "#animation.save('./three_body_problem.gif', writer='ffmpeg', fps=10, bitrate=1000)"
    ]
   },
   {
